--- a/packages.sty
+++ b/packages.sty
@@ -44,3 +44,9 @@
 
 % Этот пакет позволяет делать активные цветные гиперссылки.
 \RequirePackage[colorlinks=true, urlcolor=blue]{hyperref}
+
+% Это пакет для печати кода в документе
+\RequirePackage{listings}
+\RequirePackage[dvipsnames]{xcolor}
+\RequirePackage{code_cpp}
+\RequirePackage{code_python}
